# hs-path-abs2rel

./: CHANGELOG.md  Dockerfile  Dockerfile.wasi.txt  README.md  build-img.sh  example.sh  extract-wasi.sh  hs-path-abs2rel.cabal  opt.sh
app/: Main.hs
src/: AbsToRel.hs
